Linting and cleanup.
A little bit of cleaning.